TURMERIC-1555: fix a few test issues that findbugs has found.  Mainly not closing a file stream after reading its contents.